fixed bug: page jump in IE when click on buttons on pricing page

--- a/css/RGstyles.css
+++ b/css/RGstyles.css
@@ -1090,7 +1090,7 @@ html, body {
     width: 100%; } }
 /*hide the actual button*/
 #radio-box input {
-  visibility: hidden; }
+  display: none; }
 
 /*change the color on check*/
 #radio-box input:checked + span {
